2009-10-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSString.h:
	* Source/NSString.m:
	* Source/GSString.m:
	Remove obsolete immutable proxy method.
	* Source/NSIndexPath.m:
	* Source/NSDistributedNotificationCenter.m:
	* Source/NSAttributedString.m:
	* Source/GSArray.m:
	* Source/GSFFCallInvocation.m:
	* Source/GSFFIInvocation.m:
	* Source/GSAttributedString.m:
	* Source/NSConnection.m:
	* Source/NSThread.m:
	Replace unnecessary calls to NSDeallocateObject().

2009-10-07  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add librt for sched_yield on solaris.

2009-10-05 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: enable ffcall if ffi is disabled
	* configure: Regenerate
	* Source/mframe:delete
	* Source/mframe.m: delete
	* Source/GSInvocation.h:
	* Source/GNUmakefile:
	* Source/NSMethodSignature.m:
	* Source/GSFFCallInvocation.m:
	* Source/NSKeyValueObserving.m:
	* Source/GSFFIInvocation.m:
	* Source/NSInvocation.m:
	* Source/cifframe.m:
	* Source/NSConnection.m:
	* Source/callframe.m:
	* Source/NSDistantObject.m:
	* Headers/Foundation/NSMethodSignature.h:
	* Headers/Foundation/NSInvocation.h:
	Update for removal of mframe code.

2009-10-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile:
	* Source/NSMethodSignature.m:
	* Source/GSFFCallInvocation.m:
	* Source/mframe/mframe.head:
	* Source/GSFFIInvocation.m:
	* Source/NSInvocation.m:
	* Source/cifframe.h:
	* Source/mframe.m:
	* Source/cifframe.m:
	* Source/NSConnection.m:
	* Source/callframe.h:
	* Source/NSObjCRuntime.m:
	* Source/callframe.m:
	* Headers/Additions/GNUstepBase/DistributedObjects.h:
	* Headers/Additions/GNUstepBase/preface.h.in:
	Remove lots of obsolete code as part of the ong term process of
	scrapping the old mframe stuff.

2009-10-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/cifframe.h: Remove unused code
	* Source/cifframe.m: ditto
	* Source/callframe.h: ditto
	* Source/callframe.m: ditto